syntax = "proto3";

package eth.rollup.v1;

import "nitro_rollup.proto";
import "op_rollup.proto";

message CombinedRollups {
  repeated NitroRollup nitroRollups = 1;
  repeated OPRollup opRollups = 2;
}